src/scss/component/sidebar.scss
@import "~scss/_mixins";

.pageFlex { display: flex; flex-direction: row; justify-content: space-between; width: 100% !important; transition: transform 0.2s $easeInQuint; }
.pageFlex {
	.sidebarDummy { flex-shrink: 0; }
	#page { width: 100%; position: relative; }
}

.sidebarAnimation { transition: width 0.2s ease-in-out; }

#sidebarToggle { 
	width: 28px; height: 28px; background-size: 20px; border-radius: 6px; position: fixed; left: 88px; top: 12px; 
	background-image: url('~img/icon/widget/toggle0.svg'); z-index: 22; -webkit-app-region: no-drag;
}
#sidebarToggle:hover { background-color: var(--color-shape-highlight-medium); background-image: url('~img/icon/widget/toggle1.svg'); }

.sidebar {
	position: fixed; background-color: var(--color-shape-tertiary); z-index: 21; user-select: none; transition: none; top: 0px; left: $vaultWidthCollapsed; height: 100%;
	transform: translate3d(0px,0px,0px);
}

.sidebar.anim { transition-property: left, top, width, box-shadow, transform; transition-duration: 0.2s; transition-timing-function: ease-in-out; }

.sidebar {
	> .inner { width: 100%; height: 100%; display: flex; flex-direction: column; overflow: hidden; position: relative; z-index: 1; }
	> .inner {
		> .head { 
			display: flex; flex-direction: row; align-items: center; justify-content: flex-start; padding: 0px 12px; height: 52px;
			gap: 0px 8px;
		}
		> .head {
			.status { 
				@include text-small; font-weight: 500; @include text-overflow-nw; text-align: center; color: var(--color-text-secondary); flex-grow: 1; 
			}

			.icon { width: 28px; height: 28px; background-size: 20px; border-radius: 6px; cursor: default; -webkit-app-region: no-drag; }
			.icon:hover { background-color: var(--color-shape-highlight-medium); }
			.icon.toggle { background-image: url('~img/icon/widget/toggle0.svg'); }
			.icon.toggle:hover { background-image: url('~img/icon/widget/toggle1.svg'); }
		}

		> .body { height: calc(100% - 52px); padding: 0px 12px 12px 12px; position: relative; flex-grow: 1; overflow: auto; overscroll-behavior: none; }
	}

	.resize-h { width: 10px; height: 100%; position: absolute; top: 0px; right: -5px; cursor: col-resize; z-index: 2; }
	.resize-h {
		.resize-handle {
			position: absolute; left: 6px; top: 50%; margin: -16px 0px 0px 0px; transition: $transitionAllCommon;
			width: 12px; height: 32px;
		}
		.resize-handle::after {
			content: ''; position: absolute; left: 6px; top: 0px; width: 6px; height: 100%; background-color: var(--color-shape-secondary);
			border-radius: 3px; opacity: 0; transition: $transitionAllCommon;
		}
	}
	.resize-h:hover, .resize-h:active {
		.resize-handle::after { opacity: 1; }
	}
	.resize-h:active {
		.resize-handle { height: 64px; margin-top: -32px; }
	}
	.resize-handle:hover::after, .resize-handle:active::after { background-color: var(--color-shape-primary); }

	.loaderWrapper { position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; }
}

html.platformWindows {
	.sidebar {
		> .inner > .head { height: 38px; }
	}

	.sidebar {
		> .inner > .body { overflow-y: overlay; }
	}
}	

